<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cmps121hw3.MainActivity"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_curr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_curr"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/xaccel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xaccel"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/yaccel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yaccel"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/zaccel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zaccel"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/modaccel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modaccel"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_max"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/maxaccel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxaccel"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/maxacceltime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxacceltime"
        android:textSize="20sp" />

</LinearLayout>

